--- a/example/index.html
+++ b/example/index.html
@@ -8,12 +8,13 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style"/>
     <meta content="telephone=no" name="format-detection"/>
     <link rel="shortcut icon" type="image/ico" href="http://static.ydcss.com/ydui/img/favicon.ico"/>
+    <!-- <script src="/dist/vmui.flexible.js"></script> -->
     <script src="http://m.ydui.org/js/ydui.flexible.js"></script>
 </head>
 <body>
-<div id="app"></div>
-<script src="http://static.ydcss.com/libs/fastclick/1.0.6/fastclick.js"></script>
-<script src="/dist/vendors.js"></script>
-<script src="/dist/main.js"></script>
+    <div id="app"></div>
+    <script src="http://static.ydcss.com/libs/fastclick/1.0.6/fastclick.js"></script>
+    <script src="/dist/vendors.js"></script>
+    <script src="/dist/main.js"></script>
 </body>
 </html>
